Dummy allocator for STL containers #1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,22 @@
-project (Hoard-Allocator)
-cmake_minimum_required (VERSION 2.6.4)
-aux_source_directory (src SRC_LIST)
-add_library (${PROJECT_NAME} SHARED ${SRC_LIST})
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fPIC")
-set (CMAKE_BUILD_TYPE "Debug")
-set (EXT_PROJECTS_DIR ${PROJECT_SOURCE_DIR}/ext)
+project(Hoard-Allocator)
+cmake_minimum_required(VERSION 2.6.4)
+
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fPIC")
+set(CMAKE_BUILD_TYPE "Debug")
+set(EXT_PROJECTS_DIR ${PROJECT_SOURCE_DIR}/ext)
+set(SRC_DIR "src")
+
+#aux_source_directory (${SRC_DIR} SRC_LIST)
+file(GLOB SRC_LIST ${SRC_DIR}/*.h ${SRC_DIR}/*.cpp)
+message(STATUS "SOURCES: ${SRC_LIST}")
+add_library(${PROJECT_NAME} SHARED ${SRC_LIST})
 
 #Tests
-add_subdirectory(${EXT_PROJECTS_DIR}/gtest)
+set(PROJECT_TEST_NAME ${PROJECT_NAME}_test)
 enable_testing()
-set(PROJECT_TEST_NAME ${PROJECT_NAME_STR}_test)
-include_directories(${GTEST_INCLUDE_DIRS})
+
+add_subdirectory(${EXT_PROJECTS_DIR}/gtest)
+include_directories(${GTEST_INCLUDE_DIRS} ${SRC_DIR})
 
 file(GLOB TEST_SRC_FILES ${PROJECT_SOURCE_DIR}/test/*.cpp)
 add_executable(${PROJECT_TEST_NAME} ${TEST_SRC_FILES})
@@ -22,5 +28,5 @@ target_link_libraries(${PROJECT_TEST_NAME}
 		pthread
 	)
 
-add_test(tests ${PROJECT_TEST_NAME})
+add_test(test ${PROJECT_TEST_NAME})
 
