Tests names and running #6

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,28 +5,29 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fPIC")
 set(CMAKE_BUILD_TYPE "Debug")
 set(EXT_PROJECTS_DIR ${PROJECT_SOURCE_DIR}/ext)
 set(SRC_DIR "src")
+set(DUMMY_DIR ${SRC_DIR}/dummy)
 
-#aux_source_directory (${SRC_DIR} SRC_LIST)
 file(GLOB SRC_LIST ${SRC_DIR}/*.h ${SRC_DIR}/*.cpp)
 message(STATUS "SOURCES: ${SRC_LIST}")
 add_library(${PROJECT_NAME} SHARED ${SRC_LIST})
 
 #Tests
-set(PROJECT_TEST_NAME ${PROJECT_NAME}-test)
 enable_testing()
-
+set(TEST_DIR ${PROJECT_SOURCE_DIR}/test)
 add_subdirectory(${EXT_PROJECTS_DIR}/gtest)
 include_directories(${GTEST_INCLUDE_DIRS} ${SRC_DIR})
 
-file(GLOB TEST_SRC_FILES ${PROJECT_SOURCE_DIR}/test/*.cpp)
-add_executable(${PROJECT_TEST_NAME} ${TEST_SRC_FILES})
-add_dependencies(${PROJECT_TEST_NAME} googletest)
+#Test mmap_std_allocator
+add_executable(mmap_std_allocator_test ${TEST_DIR}/mmap_std_allocator_test.cpp)
+add_dependencies(mmap_std_allocator_test googletest)
+target_link_libraries(mmap_std_allocator_test ${GTEST_LIBS_DIR}/libgtest.a  ${GTEST_LIBS_DIR}/libgtest_main.a pthread)
+add_test(mmap_std_allocator_test mmap_std_allocator_test)
 
-target_link_libraries(${PROJECT_TEST_NAME}
-		${GTEST_LIBS_DIR}/libgtest.a
-		${GTEST_LIBS_DIR}/libgtest_main.a
-		pthread
-	)
+#Dummy allocator
+add_library("dummy_malloc_intercept" SHARED ${DUMMY_DIR}/dummy_malloc_intercept.cpp)
 
-add_test(test ${PROJECT_TEST_NAME})
-
+#Test mmap_std_allocator (executable)
+add_executable(mmap_std_allocator_executable_test ${TEST_DIR}/mmap_std_allocator_executable_test.cpp)
+add_test(mmap_std_allocator_executable_test mmap_std_allocator_executable_test)
+set_property(TEST mmap_std_allocator_executable_test PROPERTY WORKING_DIRECTORY .)
+set_property(TEST mmap_std_allocator_executable_test PROPERTY ENVIRONMENT "LD_PRELOAD=./libdummy_malloc_intercept.so")
