hashmap added, but not debuged

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,12 @@ add_dependencies(mmap_std_allocator_test googletest)
 target_link_libraries(mmap_std_allocator_test ${GTEST_LIBS_DIR}/libgtest.a  ${GTEST_LIBS_DIR}/libgtest_main.a pthread)
 add_test(mmap_std_allocator_test mmap_std_allocator_test)
 
+#Test no_alloc_hashmap
+add_executable(custom_hashmap_test ${TEST_DIR}/custom_hashmap_test.cpp ${SRC_DIR}/tracing.cpp)
+add_dependencies(custom_hashmap_test googletest)
+target_link_libraries(custom_hashmap_test ${GTEST_LIBS_DIR}/libgtest.a  ${GTEST_LIBS_DIR}/libgtest_main.a pthread)
+add_test(custom_hashmap_test custom_hashmap_test)
+
 #Dummy allocator
 add_library("dummy_malloc_intercept" SHARED ${DUMMY_DIR}/dummy_malloc_intercept.cpp)
 
