--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,22 +17,22 @@ set(TEST_DIR ${PROJECT_SOURCE_DIR}/test)
 add_subdirectory(${EXT_PROJECTS_DIR}/gtest)
 include_directories(${GTEST_INCLUDE_DIRS} ${SRC_DIR})
 
-#Test mmap_std_allocator
+##Test mmap_std_allocator
 add_executable(mmap_std_allocator_test ${TEST_DIR}/mmap_std_allocator_test.cpp)
 add_dependencies(mmap_std_allocator_test googletest)
 target_link_libraries(mmap_std_allocator_test ${GTEST_LIBS_DIR}/libgtest.a  ${GTEST_LIBS_DIR}/libgtest_main.a pthread)
 add_test(mmap_std_allocator_test mmap_std_allocator_test)
 
-#Test no_alloc_hashmap
+##Test no_alloc_hashmap
 add_executable(custom_hashmap_test ${TEST_DIR}/custom_hashmap_test.cpp ${SRC_DIR}/tracing.cpp)
 add_dependencies(custom_hashmap_test googletest)
 target_link_libraries(custom_hashmap_test ${GTEST_LIBS_DIR}/libgtest.a  ${GTEST_LIBS_DIR}/libgtest_main.a pthread)
 add_test(custom_hashmap_test custom_hashmap_test)
 
-#Dummy allocator
-add_library("dummy_malloc_intercept" SHARED ${DUMMY_DIR}/dummy_malloc_intercept.cpp)
+##Dummy allocator
+#add_library("dummy_malloc_intercept" SHARED ${DUMMY_DIR}/dummy_malloc_intercept.cpp)
 
-#Test mmap_std_allocator (executable)
+##Test mmap_std_allocator (executable)
 add_executable(mmap_std_allocator_executable_test ${TEST_DIR}/mmap_std_allocator_executable_test.cpp)
 add_test(mmap_std_allocator_executable_test mmap_std_allocator_executable_test)
 set_property(TEST mmap_std_allocator_executable_test PROPERTY WORKING_DIRECTORY .)
