dummy link error fix

--- a/src/hoard_allocator/dummy/CMakeLists.txt
+++ b/src/hoard_allocator/dummy/CMakeLists.txt
@@ -1,3 +1,4 @@
 add_library(dummy_malloc_intercept SHARED
   dummy_malloc_intercept.cpp
 )
+target_link_libraries(dummy_malloc_intercept hoard_common)
