--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -3,11 +3,10 @@ function(add_gtest name)
     ${ARGN}
   )
   target_link_libraries(${name} gtest_main)
-  add_test(${name} ${name})
+  add_test(${name} ${EXECUTABLE_OUTPUT_PATH}/${name})
 endfunction()
 
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/test)
-
 
 add_gtest(custom_hashmap_test
  custom_hashmap_test.cpp
