Project structure change noalloc_testing.h introduced minor fixes

--- a/src/hoard_allocator/dummy/CMakeLists.txt
+++ b/src/hoard_allocator/dummy/CMakeLists.txt
@@ -1,4 +1,5 @@
-add_library(dummy_malloc_intercept SHARED
+add_library(dummy_malloc_intercept
   dummy_malloc_intercept.cpp
 )
 target_link_libraries(dummy_malloc_intercept hoard_common)
+
