--- a/src/hoard_allocator/CMakeLists.txt
+++ b/src/hoard_allocator/CMakeLists.txt
@@ -4,7 +4,7 @@ add_subdirectory(hoard_common/)
 include_directories(hoard_common/)
 
 add_library(hoard_core
-  AllocFreeHashMap.h
+  hoard_common/AllocFreeHashMap.h
   BaseHeap.h
   BaseHeap.cpp
   FreeSuperblockManager.h
@@ -25,7 +25,7 @@ target_include_directories(hoard_core PUBLIC
   ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
-add_library(malloc_intercept SHARED
+add_library(malloc_intercept
   MallocIntercept.cpp
 )
 
