--- a/src/hoard_allocator/dummy/CMakeLists.txt
+++ b/src/hoard_allocator/dummy/CMakeLists.txt
@@ -3,3 +3,8 @@ add_library(dummy_malloc_intercept
 )
 target_link_libraries(dummy_malloc_intercept hoard_common)
 
+add_library(die_malloc_intercept
+  die_malloc_intercept.cpp
+)
+target_link_libraries(die_malloc_intercept hoard_common)
+
