--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -18,10 +18,11 @@ function(add_dummy_alloc_test name)
   get_target_property(VAR dummy_malloc_intercept LOCATION)
   add_test(NAME ${name} COMMAND ${name})
   if(APPLE)
-      SET_TESTS_PROPERTIES(${name} PROPERTIES ENVIRONMENT "DYLD_FORCE_FLAT_NAMESPACE=1 DYLD_PRINT_LIBRARIES=1 DYLD_INSERT_LIBRARIES=${VAR}")
-      SET_TESTS_PROPERTIES(${name} PROPERTIES ENVIRONMENT "DYLD_INSERT_LIBRARIES=${VAR}")
+      SET_PROPERTY(TEST ${name} PROPERTY ENVIRONMENT "DYLD_FORCE_FLAT_NAMESPACE=1 DYLD_PRINT_LIBRARIES=1 DYLD_INSERT_LIBRARIES=${VAR}")
+      SET_PROPERTY(TEST ${name} PROPERTY ENVIRONMENT "DYLD_INSERT_LIBRARIES=${VAR}")
+      set(ENV{DYLD_INSERT_LIBRARIES} "${VAR}" )
   else(APPLE)
-      SET_TESTS_PROPERTIES(${name} PROPERTIES ENVIRONMENT "LD_PRELOAD=${VAR}")
+      SET_PROPERTY(TEST ${name} PROPERTY ENVIRONMENT "LD_PRELOAD=${VAR}")
   endif(APPLE)
 
 
@@ -33,6 +34,9 @@ SET (CTEST_ENVIRONMENT
   "DYLD_FORCE_FLAT_NAMESPACE=1 DYLD_PRINT_LIBRARIES=1 DYLD_INSERT_LIBRARIES=${VAR}"
 )
 
+  get_target_property(VAR dummy_malloc_intercept LOCATION)
+  message(${VAR})
+  message("HI!!! $<TARGET_FILE:dummy_malloc_intercept>")
 
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/test)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include ./../hoard_allocator/hoard_common)
@@ -52,8 +56,10 @@ add_noalloc_test(hashmap_noalloc_test
   hashmap_noalloc_test.cpp
 )
 
-
 add_library(shared_malloc SHARED shared_malloc.cpp)
 add_dummy_alloc_test(shared_malloc_test shared_malloc_test.cpp)
 target_link_libraries(shared_malloc_test shared_malloc)
+
+add_executable(ld_preload_test ld_preload_test.cpp)
+#target_link_libraries(ld_preload_test hoard_common)
 
