LD_PRELOAD tests introduced

--- a/src/hoard_allocator/dummy/CMakeLists.txt
+++ b/src/hoard_allocator/dummy/CMakeLists.txt
@@ -3,7 +3,7 @@ add_library(dummy_malloc_intercept SHARED
 )
 target_link_libraries(dummy_malloc_intercept hoard_common)
 
-add_library(die_malloc_intercept
+add_library(die_malloc_intercept SHARED
   die_malloc_intercept.cpp
 )
 target_link_libraries(die_malloc_intercept hoard_common)
