Big allocations test #17

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -28,9 +28,9 @@ function(add_dummy_alloc_test name)
   set_test_preload(${name} dummy_malloc_intercept)
 endfunction()
 
-function(add_malloc_intercept_test name)
-  add_test_macro(${name} ${ARGN})
-  set_test_preload(${name} malloc_intercept)
+function(add_malloc_intercept_gtest name)
+  add_gtest(${name} ${ARGN})
+  target_link_libraries(${name} malloc_intercept)
 endfunction()
 
 #####################################################################
@@ -75,4 +75,4 @@ add_noalloc_test(hashmap_noalloc_test hashmap_noalloc_test.cpp)
 
 add_gtest(utils_test utils_test.cpp)
 
-add_malloc_intercept_test(big_alloc_test big_alloc_test.cpp)
+add_malloc_intercept_gtest(big_alloc_test big_alloc_test.cpp)
