Add global heap test

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -77,3 +77,4 @@ add_gtest(utils_test utils_test.cpp)
 
 add_malloc_intercept_gtest(big_alloc_test big_alloc_test.cpp)
 add_malloc_intercept_gtest(free_superblock_manager_test free_superblock_manager_test.cpp)
+add_malloc_intercept_gtest(global_heap_test global_heap_test.cpp)
