--- a/src/hoard_allocator/CMakeLists.txt
+++ b/src/hoard_allocator/CMakeLists.txt
@@ -6,6 +6,7 @@ include_directories(hoard_common/)
 add_library(hoard_core
   hoard_common/AllocFreeHashMap.h
   BaseHeap.h
+  BaseHeap.cpp
   BaseStack.h
   Block.h
   BlockStack.h
