--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -92,5 +92,5 @@ add_hoard_core_gtest(big_alloc_test big_alloc_test.cpp)
 add_hoard_core_gtest(superblock_test superblock_test.cpp)
 add_hoard_core_gtest(free_superblock_manager_test free_superblock_manager_test.cpp)
 add_hoard_core_gtest(global_heap_test global_heap_test.cpp)
-add_hoard_core_gtest(local_heap_test local_heap_test.cpp)
+add_hoard_core_gtest(local_heap_test local_heap_test.cpp include/allocation_tester.h)
 add_hoard_core_gtest(internals_test internals_test.cpp)
