--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -62,6 +62,12 @@ add_custom_target(nano
 )
 add_dependencies(nano malloc_intercept)
 
+add_custom_target(vim
+  COMMAND LD_PRELOAD=./lib/libmalloc_intercept.so vim
+  WORKING_DIRECTORY ${PROJECT_BINARY_DIR}
+)
+add_dependencies(vim malloc_intercept)
+
 add_custom_target(qbittorrent
   COMMAND LD_PRELOAD=./lib/libmalloc_intercept.so qbittorrent
   WORKING_DIRECTORY ${PROJECT_BINARY_DIR}
